pronto-eats/salesforce/force-app/main/default/objects/Push_Subscription__c/Push_Subscription__c.object-meta.xml
<CustomObject>
    <description>A device opted in to Pronto Eats web-push notifications.</description>
    <label>Push Subscription</label>
    <pluralLabel>Push Subscriptions</pluralLabel>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>