pronto-eats/salesforce/force-app/main/default/objects/Push_Subscription__c/fields/Auth__c.field-meta.xml
<CustomField>
    <fullName>Auth__c</fullName>
    <label>Auth Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>