pronto-eats/salesforce/force-app/main/default/objects/Push_Subscription__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Push Subscriptions</relationshipLabel>
    <relationshipName>Push_Subscriptions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>