pronto-eats/salesforce/force-app/main/default/objects/Push_Subscription__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>