pronto-eats/salesforce/force-app/main/default/objects/Push_Subscription__c/fields/P256dh__c.field-meta.xml
<CustomField>
    <fullName>P256dh__c</fullName>
    <label>P256dh Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>