pronto-eats/salesforce/force-app/main/default/objects/Push_Subscription__c/fields/Subscription_Key__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Key__c</fullName>
    <label>Subscription Key</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>